# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.sql  db.py
page_analyzer/templates/: index.html  not_found.html  url.html  urls.html
