[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ivan <nikbyar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^22.0.0"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
