[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ivan <nikbyar@gmail.com>"]
readme = "README.md"
packages = [
    { include = "page_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^22.0.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
